--- a/app.css
+++ b/app.css
@@ -3,3 +3,15 @@ body {
     font-family: "Nunito", sans-serif;
 }
 
+#mainNavbar .nav-link {
+    color: rgba(255, 255, 255, 0.801);
+    text-align: center;
+    transition: border-color 0.25s, color 0.25s, box-shadow 0.25s, transform 0.25s;
+}
+
+#mainNavbar .nav-link:hover {
+    color: white;
+    box-shadow: 0 0.5em 0.5em -0.4em #24ccf7;
+    transform: translateY(-0.3rem);
+    cursor: pointer;
+}
