--- a/app.css
+++ b/app.css
@@ -1,12 +1,23 @@
+
+
 body {
     background: #0f1b35;
     font-family: "Nunito", sans-serif;
 }
 
+body .navbar-brand{
+    font-size: 2rem;
+}
+
 #mainNavbar .nav-link {
     color: rgba(255, 255, 255, 0.801);
-    text-align: center;
+    font-size: large;
     transition: border-color 0.25s, color 0.25s, box-shadow 0.25s, transform 0.25s;
+}
+
+#mainNavbar #navLinks{
+    background-color: #0f1b35b4;
+    text-align: center;
 }
 
 #mainNavbar .nav-link:hover {
@@ -14,4 +25,18 @@ body {
     box-shadow: 0 0.5em 0.5em -0.4em #24ccf7;
     transform: translateY(-0.3rem);
     cursor: pointer;
+}
+
+.container {
+    height: 300px;
+    background-color: #b6dde7ad;
+    padding: 10px;
+    margin: Auto;
+    margin-top: 4rem;
+    max-width: 1000px;
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
 }
