--- a/app.css
+++ b/app.css
@@ -3,6 +3,15 @@ body {
     background-color: #ffe2bd21;
 }
 
+a {
+    color: rgb(12, 92, 197)
+}
+
+a:hover {
+    color: gold;
+    cursor: pointer;
+}
+
 .navbar-brand {
     font-size: 2rem;
 }
@@ -58,9 +67,29 @@ body {
 
 .about-content-left {
     text-align: start;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     padding: 30px 50px;
     line-height: 2.5rem;
+}
+
+#intro-btn {
+    background-color: #346346b4;
+    border: 0px;
+    color: white;
+    margin: 1rem 0px;
+}
+
+#intro-btn:hover {
+    color: white;
+    box-shadow: 0 0.5em 0.5em -0.4em #929292;
+    transform: translateY(-0.3rem);
+    cursor: pointer;
+    transition: border-color 0.25s, color 0.25s, box-shadow 0.25s, transform 0.5s;
+}
+
+.card-body {
+    background-color: #f5ebdf83;
+    padding: 20px;
 }
 
 .about-content-right {
@@ -69,23 +98,11 @@ body {
     line-height: 2.5rem;
 }
 
-.about-content-right p {
-    text-align: center;
-    margin-top: 2rem;
-    background-color: #3463460e;
-    margin: 3rem 5rem 0 5rem;
-    padding: 0 2rem;
-    font-weight: 800;
-    border-radius: 10px;
-    min-width: 150px;
-    font-size: 1.1rem;
-}
-
 .projects-content {
     margin: 8% 10% 0 10%;
 }
 
-.projects-content h2{
+.projects-content h2 {
     font-weight: 900;
 }
 
@@ -100,6 +117,11 @@ body {
 
 .github-project-link, .external-project-link {
     color: rgba(50, 50, 119, 0.521);
+}
+
+.github-project-link:hover, .external-project-link:hover {
+    box-shadow: 0 0.5em 0.5em -0.4em #123e57;
+    cursor: pointer;
 }
 
 .project-link-group .external-project-link {
