--- a/app.css
+++ b/app.css
@@ -73,18 +73,18 @@ a:hover {
 }
 
 #intro-btn {
-    background-color: rgba(38, 74, 121, 0.63);
+    background-color: #10244e;
     border: 0px;
     color: white;
     margin: 1rem 0px;
+    transition: border-color 0.25s, color 0.25s, box-shadow 0.25s, transform 0.5s;
 }
 
 #intro-btn:hover {
-    color: white;
+    color: gold;
     box-shadow: 0 0.5em 0.5em -0.4em #929292;
     transform: translateY(-0.3rem);
     cursor: pointer;
-    transition: border-color 0.25s, color 0.25s, box-shadow 0.25s, transform 0.5s;
 }
 
 .card-body {
@@ -106,6 +106,11 @@ a:hover {
     font-weight: 900;
 }
 
+#skillset span {
+    color: rgb(224, 98, 98);
+    margin: 1rem;
+}
+
 .projects-content p {
     font-size: 1.2rem;
 }
@@ -115,12 +120,12 @@ a:hover {
     font-size: 1.5rem;
 }
 
-.github-project-link, .external-project-link {
+.github-project-link, .external-project-link, .footer-link {
     color: rgba(50, 50, 119, 0.521);
 }
 
 .github-project-link:hover, .external-project-link:hover {
-    box-shadow: 0 0.5em 0.5em -0.4em #123e57;
+    box-shadow: 0 0.5em 0.5em -0.4em #929292;
     cursor: pointer;
 }
 
@@ -147,4 +152,5 @@ a:hover {
 .footer-link {
     font-size: 2rem;
     color: #0f1b35;
+    ;
 }
