--- a/style.css
+++ b/style.css
@@ -9,6 +9,145 @@ body {
     margin: 0;
 }
 
+/* start welcome animation */
+
+.welcome {
+    overflow: hidden;
+    -webkit-font-smoothing: antialiased;
+}
+
+.welcome .splash {
+    height: 0px;
+    padding: 0px;
+    border: 130em solid #039be5;
+    position: fixed;
+    left: 50%;
+    top: 100%;
+    display: block;
+    box-sizing: initial;
+    overflow: hidden;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    animation: puff 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
+}
+
+.welcome #welcome {
+    background: #311b92;
+    width: 56px;
+    height: 56px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards, hide 2s 2.9s ease forwards;
+}
+
+/* moveIn */
+
+.welcome header {
+    opacity: 0;
+    animation: moveIn 2s 3.1s ease forwards;
+}
+
+@keyframes init {
+    0% {
+        width: 0px;
+        height: 0px;
+    }
+    100% {
+        width: 56px;
+        height: 56px;
+        margin-top: 0px;
+        opacity: 1;
+    }
+}
+
+@keyframes puff {
+    0% {
+        top: 100%;
+        height: 0px;
+        padding: 0px;
+    }
+    100% {
+        top: 50%;
+        height: 100%;
+        padding: 0px 100%;
+    }
+}
+
+@keyframes borderRadius {
+    0% {
+        border-radius: 50%;
+    }
+    100% {
+        border-radius: 0px;
+    }
+}
+
+@keyframes moveDown {
+    0% {
+        top: 50%;
+    }
+    50% {
+        top: 40%;
+    }
+    100% {
+        top: 100%;
+    }
+}
+
+@keyframes moveUp {
+    0% {
+        background: #311b92;
+        top: 100%;
+    }
+    50% {
+        top: 40%;
+    }
+    100% {
+        top: 50%;
+        background: #039be5;
+    }
+}
+
+@keyframes materia {
+    0% {
+        background: #039be5;
+    }
+    50% {
+        background: #039be5;
+        top: 26px;
+    }
+    100% {
+        background: #0f1b35;
+        width: 100%;
+        height: 64px;
+        border-radius: 0px;
+        top: 26px;
+    }
+}
+
+@keyframes moveIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes hide {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 a {
     color: rgb(12, 92, 197)
 }
@@ -126,10 +265,18 @@ a:hover {
     justify-content: space-around;
 }
 
-.about-content-left, #projects-description {
+.about-content-left {
     text-align: start;
     line-height: 2.5rem;
     justify-content: center;
+}
+
+#projects-description {
+    text-align: start;
+    line-height: 2.5rem;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 
 #intro-btn {
@@ -161,12 +308,12 @@ a:hover {
     border: 0px;
 }
 
-#skills{
+#skills {
     font-weight: 900;
     font-size: 1.5rem;
 }
 
-.about-content-right{
+.about-content-right {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -177,7 +324,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     min-width: 60%;
-    justify-content: space-around ;
+    justify-content: space-around;
 }
 
 .about-picture {
@@ -243,4 +390,3 @@ a:hover {
         font-size: 2rem;
     }
 }
-
