--- a/style.css
+++ b/style.css
@@ -392,4 +392,10 @@ a:hover {
     .home-container p {
         font-size: 2rem;
     }
+    .about-content-left {
+        text-align: center;
+    }
+    .about-picture {
+        max-width: 200px;
+    }
 }
