--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ Source: https://codepen.io/hiteshsahu/pen/MOgzej  */
 }
 
 /* moveIn */
-
 .welcome nav {
     opacity: 0;
     animation: moveIn 2s 3.1s ease forwards;
@@ -185,7 +184,7 @@ a:hover {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #0087ca;
+    background-color: gold;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
@@ -211,7 +210,7 @@ a:hover {
 
 #mainNavbar .nav-link:hover {
     color: white;
-    box-shadow: 0 0.5em 0.5em -0.4em #0087ca;
+    box-shadow: 0 0.5em 0.5em -0.4em gold;
     cursor: pointer;
     transition: 400ms ease-in-out;
 }
@@ -228,8 +227,13 @@ a:hover {
 }
 
 #home {
+    width : 100%;
     min-height: 100vh;
-    background-color: #0f1b35;
+    background-image: url(images/ocean.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -239,8 +243,64 @@ a:hover {
 
 .home-container p {
     color: rgb(224, 98, 98);
+    text-shadow: #fff 0px 0px 10px;
     font-size: 4rem;
     font-weight: bold;
+}
+/* bubble effect */
+.bubbles img {
+    width: 30px;
+    animation: bubbles 7s linear infinite;
+}
+
+.bubbles {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    bottom: -70px;
+}
+
+@keyframes bubbles {
+    0% {
+        transform: translateY(0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    70% {
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-80vh);
+        opacity: 0;
+    }
+}
+
+.bubbles img:nth-child(1) {
+    animation-delay: 2s;
+}
+
+.bubbles img:nth-child(2) {
+    animation-delay: 6s;
+}
+
+.bubbles img:nth-child(3) {
+    animation-delay: 4s;
+}
+
+.bubbles img:nth-child(4) {
+    animation-delay: 1s;
+}
+
+.bubbles img:nth-child(5) {
+    animation-delay: 3s;
+}
+
+.bubbles img:nth-child(3=6) {
+    animation-delay: 2s;
 }
 
 .scroll-down {
@@ -250,10 +310,9 @@ a:hover {
     text-align: center;
     border-radius: 100%;
     position: absolute;
-    left: 50%;
+    left: 49%;
     bottom: 2%;
     transition: background-color .3s, opacity .5s, visibility .5s;
-    z-index: 2;
     -webkit-animation: bounce 2s infinite 2s;
     animation: bounce 2s infinite 2s;
     -webkit-transition: all .2s ease-in;
