Convert bgImg format

--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ a:hover {
 #home {
     width : 100%;
     min-height: 100vh;
-    background-image: url(images/ocean.jpg);
+    background-image: url(images/ocean.webp);
     background-size: cover;
     background-position: center;
     position: relative;
